<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.manheadblog.moviemania.useCase.tvdetail.TVShowDetailViewModel" />
        <variable
            name="tvshowModel"
            type="com.manheadblog.moviemania.model.TVShow" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background"
        tools:context=".useCase.tvdetail.TVShowDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/loadingBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="@{viewModel.busy ? 0 : 8}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="@{viewModel.busy ? 8 : 0}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/imageViewTVShowBackground"
                    android:layout_width="0dp"
                    android:layout_height="295dp"
                    android:contentDescription="@string/backgroundTVShowPoster"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/tvshow_poster_arrow" />

                <ImageView
                    android:id="@+id/imageViewTVShowPoster"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:contentDescription="@string/imagePosterTVShow"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewTVShowBackground"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewTVShowBackground"
                    app:layout_constraintStart_toStartOf="@+id/imageViewTVShowBackground"
                    app:layout_constraintTop_toTopOf="@+id/imageViewTVShowBackground"
                    tools:srcCompat="@drawable/tvshow_poster_arrow" />

                <TextView
                    android:id="@+id/textViewTVShowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/dark_text_subtitle"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@{tvshowModel.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewTVShowBackground"
                    tools:text="Arrow" />

                <TextView
                    android:id="@+id/textViewTVShowReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.firstAirDate}"
                    app:layout_constraintStart_toStartOf="@+id/textViewTVShowTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowTitle"
                    tools:text="2019" />

                <TextView
                    android:id="@+id/textViewTVShowRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.stringEpisodeRuntime}"
                    app:layout_constraintStart_toEndOf="@+id/textViewTVShowReleaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowTitle"
                    tools:text="2h 1m" />

                <LinearLayout
                    android:id="@+id/layoutGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowReleaseDate" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/movie_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutGenre" />

                <TextView
                    android:id="@+id/textViewTVShowDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_status"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowDescription" />

                <TextView
                    android:id="@+id/textViewTVShowStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.status}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:text="Released" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_score"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowDescription" />

                <TextView
                    android:id="@+id/textViewTVShowScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.stringVoteAverage}"
                    android:background="@{tvshowModel.voteAverage &gt;= 7 ? @color/score_green : (tvshowModel.voteAverage &lt;7 &amp;&amp; tvshowModel.voteAverage>5 ? @color/score_yellow: @color/score_red)}"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:text="85" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_language"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowDescription" />

                <TextView
                    android:id="@+id/textViewTVShowLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.stringOriginalLanguage}"
                    app:layout_constraintEnd_toEndOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    tools:text="English" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:visibility="@{viewModel.busy ? 8 : 0}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tvshow_episode"
                    android:textColor="@color/dark_text_subtitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvshow_firstrelease"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@id/textView16" />

                <TextView
                    android:id="@+id/textViewTvShowFirstRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.firstAirDate}"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17"
                    tools:text="02-02-2019" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvshow_last_release"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTvShowFirstRelease" />

                <TextView
                    android:id="@+id/textViewTVShowLastRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.lastAirDate}"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18"
                    tools:text="05-05-2019" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvshow_number_of_seasons"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTVShowLastRelease" />

                <TextView
                    android:id="@+id/textViewNumberOfSeasons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.stringNumberOfSeasons}"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    tools:text="6" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvshow_number_of_episodes"
                    android:textColor="@color/dark_text_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNumberOfSeasons" />

                <TextView
                    android:id="@+id/textViewNumberOfEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_text_subtitle"
                    android:text="@{tvshowModel.stringNumberOfEpisodes}"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    tools:text="116" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>